# afanci

./: .gitignore  CMakeLists.txt  README.md  readme  requirements.odt
casing/: casing.FCStd
circuit/scem/: scem (conflicted copy 2023-09-04 163602).kicad_pro  scem (conflicted copy 2023-09-04 172845).kicad_sch  scem.kicad_prl  scem.kicad_pro  scem.kicad_sch  scem.xml
circuit/sim/: sim.asc  simple-driver1.asc  simple-driver1.op.raw
software/ATMEGA/afanci/: afanci.atsln
software/ATMEGA/afanci/afanci/: afanci.cproj  main.c  test.c
software/ATMEGA/afanci/afanci/Debug/: Makefile  afanci (conflicted copy 2023-09-04 153609).hex  afanci.elf  afanci.hex  afanci.lss  afanci.map  memoryfile.xml  test.d
software/ATMEGA/afanci/afanci/Debug/src/ASF/mega/boards/atmega328p_xplained_mini/: init.d
software/ATMEGA/afanci/afanci/Release/: Makefile  afanci.elf  afanci.hex  afanci.lss  afanci.map  memoryfile.xml
software/PC/: CMakeLists.txt  afanci.cpp  main.cpp
src/app/: CMakeLists.txt  main.cpp
